--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,4 +1,6 @@
-<p>This is my Portfolio</p>
+<p>This is my Portfolio!</p>
+
+</p><a href="My Resume">file:///Z:/TechnicalProfessionalism/resume.html</a></p>
 
 <h1 id="2017">2017</h1>
 
